--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^16.2.0",
     "chart.js": "^4.4.0",
     "json-server": "^0.17.3",
+    "primeicons": "^6.0.1",
     "primeng": "^16.3.1",
     "quill": "^1.3.7",
     "rxjs": "~7.8.0",
