--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "body-parser": "^1.20.2",
     "chart.js": "^4.4.0",
+    "express": "^4.18.2",
     "json-server": "^0.17.3",
+    "nodemailer": "^6.9.5",
     "primeng": "^16.3.1",
     "quill": "^1.3.7",
     "rxjs": "~7.8.0",
