--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "chart.js": "^4.4.0",
+    "generic-list-filter": "^0.1.5",
     "json-server": "^0.17.3",
+    "primeflex": "^3.3.1",
+    "primeicons": "^6.0.1",
     "primeng": "^16.3.1",
     "quill": "^1.3.7",
     "rxjs": "~7.8.0",
