--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "primeng": "^16.3.1",
     "quill": "^1.3.7",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.7.32",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
